# dbg-c

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
sample/: main.c  test_cpp_streams.cpp
sample/c/: test_c_functions.c  test_multiline.c  test_multiline_commented.c
sample/cpp/: test_multiline.cpp  test_multiline_commented.cpp
sample/go/: test_basic.go  test_basic_commented.go  test_commented.go  test_log.go  test_multiline.go
sample/java/: TestBasic.java  TestBasic_commented.java  TestCommented.java  TestMultiline.java
sample/rust/: test_basic.rs  test_basic_commented.rs  test_commented.rs  test_dbg.rs  test_multiline.rs
sample/utils/: math_utils.c  string_utils.c
src/: cli.rs  editor.rs  finder.rs  lib.rs  main.rs  processor.rs  types.rs  ui.rs
tests/: main.c
tests/subdir/: utils.c
