[package]
name = "flop-cli"
version = "0.1.1"
edition = "2021"
authors = ["Justhiro55"]
description = "Interactively flip debug output statements in C/C++ code"
license = "MIT"
repository = "https://github.com/Justhiro55/flop"
readme = "README.md"
keywords = ["debug", "printf", "cpp", "interactive", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "flop"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
regex = "1.11"
anyhow = "1.0"
ratatui = "0.29"
crossterm = "0.28"
